# music-assistant-nicovideo-fixtures

./: .gitignore  .pre-commit-config.yaml  README.md  fixture_types.py  pyproject.toml
.github/workflows/: update-fixtures.yml
fixture_data/: __init__.py
fixture_generator/: api_fixture_collector.py  diff_tracker.py  field_stabilizer.py  fixture_saver.py  fixture_type_mapping.py  generation_orchestrator.py  helpers.py  main.py
fixtures/stream/: stream_data.json
scripts/: __init__.py  api_fixture_collector.py  constants.py  diff_tracker.py  field_stabilizer.py  fixture_saver.py  fixture_type_mapping.py  generation_orchestrator.py  helpers.py  main.py  run_fixture_generator.sh  types.py
src/fixture_data/: fixture_type_mappings.py
src/fixture_generator/: api_fixture_collector.py  diff_tracker.py  field_stabilizer.py  fixture_saver.py  fixture_type_mapping.py  generation_orchestrator.py  helpers.py  main.py  type_mapping_generator.py  types.py
